feat/add spinner logic and view

--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -6,7 +6,9 @@
         "GUID:34853347fa3750d4db49f588bc0c9868",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:77221876cc6b8244180b96e320b1bcd4"
+        "GUID:77221876cc6b8244180b96e320b1bcd4",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:593a5b492d29ac6448b1ebf7f035ef33"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
