--- a/Assets/Installers/Installers.asmdef
+++ b/Assets/Installers/Installers.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:e583230033c47964ca79d120a124a9f5"
+        "GUID:e583230033c47964ca79d120a124a9f5",
+        "GUID:ef1ff925730ba9341bb3400e6f868500"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
