--- a/Assets/Installers/Installers.asmdef
+++ b/Assets/Installers/Installers.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:e583230033c47964ca79d120a124a9f5",
-        "GUID:ef1ff925730ba9341bb3400e6f868500"
+        "GUID:ef1ff925730ba9341bb3400e6f868500",
+        "GUID:b232f3086d41d8c4ba44e6d37dcb5e43"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
