--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -8,7 +8,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:77221876cc6b8244180b96e320b1bcd4",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:ef1ff925730ba9341bb3400e6f868500"
+        "GUID:ef1ff925730ba9341bb3400e6f868500",
+        "GUID:b232f3086d41d8c4ba44e6d37dcb5e43",
+        "GUID:2f835ac868021b64b8ed93180f9fd488"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
