fix/make dotween asmdef

--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -10,7 +10,9 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:ef1ff925730ba9341bb3400e6f868500",
         "GUID:b232f3086d41d8c4ba44e6d37dcb5e43",
-        "GUID:2f835ac868021b64b8ed93180f9fd488"
+        "GUID:2f835ac868021b64b8ed93180f9fd488",
+        "GUID:a3c1b5df43be61448995f50c8526fb4d",
+        "GUID:029c1c1b674aaae47a6841a0b89ad80e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
