chore/adding new to installers

--- a/Assets/Game/Visuals/Module.Visuals.asmdef
+++ b/Assets/Game/Visuals/Module.Visuals.asmdef
@@ -2,18 +2,19 @@
     "name": "Module.Visuals",
     "rootNamespace": "",
     "references": [
+        "Unity.TextMeshPro",
+        "R3.Unity",
+        "UniTask",
+        "VContainer",
+        "UniTask.DOTween",
+        "DOTween.Modules",
         "Module.BeatmapPipeline",
         "Module.ElementHandle",
         "Module.MapTime",
         "SongMap",
         "Module.PriorityTaskPipeline",
-        "VContainer",
-        "UniTask",
-        "DOTween.Modules",
-        "UniTask.DOTween",
         "PrefabProviding",
-        "Services",
-        "Unity.TextMeshPro"
+        "Services"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
