chore/tweak asmdefs

--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -19,7 +19,8 @@
         "GUID:b7be9c4b6ddb2cb4598bb6ddd8b94f2c",
         "GUID:f19bbf45e08875a47a5e9d635eb4193c",
         "GUID:a936875047510a74786ca1c4e047ddc6",
-        "GUID:7a6388813d899464dab1867217efe74f"
+        "GUID:7a6388813d899464dab1867217efe74f",
+        "GUID:563e7db2e541c9343ab13b60e646fe2c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
