--- a/Assets/Game/Visuals/Module.Visuals.asmdef
+++ b/Assets/Game/Visuals/Module.Visuals.asmdef
@@ -14,7 +14,8 @@
         "SongMap",
         "Module.PriorityTaskPipeline",
         "PrefabProviding",
-        "Services"
+        "AudioSystem",
+        "Input"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
