--- a/Assets/Game/Input/Input.asmdef
+++ b/Assets/Game/Input/Input.asmdef
@@ -1,21 +1,14 @@
 {
-    "name": "Installers",
+    "name": "Input",
     "rootNamespace": "",
     "references": [
+        "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:e583230033c47964ca79d120a124a9f5",
-        "GUID:ef1ff925730ba9341bb3400e6f868500",
-        "GUID:b232f3086d41d8c4ba44e6d37dcb5e43",
         "GUID:34853347fa3750d4db49f588bc0c9868",
         "GUID:692421978b3874c459358815cbef13a5",
-        "GUID:50ff083bc013f2543a3940eb71111606",
         "GUID:c23c87274faff5844a311ac5cfad13e7",
-        "GUID:2f835ac868021b64b8ed93180f9fd488",
-        "GUID:b7be9c4b6ddb2cb4598bb6ddd8b94f2c",
-        "GUID:f19bbf45e08875a47a5e9d635eb4193c",
-        "GUID:a936875047510a74786ca1c4e047ddc6",
-        "GUID:7a6388813d899464dab1867217efe74f",
-        "GUID:563e7db2e541c9343ab13b60e646fe2c"
+        "GUID:50ff083bc013f2543a3940eb71111606",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
